--- a/src/frontend/images.qrc
+++ b/src/frontend/images.qrc
@@ -5,5 +5,6 @@
         <file>images/keyboard_layout.png</file>
         <file>images/keyboard_layout_viewer.png</file>
         <file>images/settings.png</file>
+        <file>images/shutdown.png</file>
     </qresource>
 </RCC>
