--- a/src/frontend/images.qrc
+++ b/src/frontend/images.qrc
@@ -8,5 +8,6 @@
         <file>images/shutdown.png</file>
         <file>images/zoom-in.png</file>
         <file>images/zoom-out.png</file>
+        <file>images/OpenBangla-Keyboard.png</file>
     </qresource>
 </RCC>
