--- a/src/frontend/TopBar.ui
+++ b/src/frontend/TopBar.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>162</width>
-    <height>30</height>
+    <width>181</width>
+    <height>31</height>
    </rect>
   </property>
   <property name="cursor">
@@ -24,7 +24,7 @@
    <widget class="QPushButton" name="buttonAbout">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>120</x>
       <y>0</y>
       <width>31</width>
       <height>31</height>
@@ -41,7 +41,7 @@
    <widget class="QPushButton" name="buttonSetLayout">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>30</x>
       <y>0</y>
       <width>31</width>
       <height>31</height>
@@ -58,7 +58,7 @@
    <widget class="QPushButton" name="buttonViewLayout">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>60</x>
       <y>0</y>
       <width>31</width>
       <height>31</height>
@@ -75,7 +75,7 @@
    <widget class="QPushButton" name="buttonSettings">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>90</x>
       <y>0</y>
       <width>31</width>
       <height>31</height>
@@ -92,7 +92,7 @@
    <widget class="QPushButton" name="buttonShutdown">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>150</x>
       <y>0</y>
       <width>31</width>
       <height>31</height>
@@ -104,6 +104,23 @@
     <property name="icon">
      <iconset resource="images.qrc">
       <normaloff>:/images/shutdown.png</normaloff>:/images/shutdown.png</iconset>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonIcon">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="images.qrc">
+      <normaloff>:/images/icon.png</normaloff>:/images/icon.png</iconset>
     </property>
    </widget>
   </widget>
