Add tooltip for move button

--- a/src/frontend/TopBar.ui
+++ b/src/frontend/TopBar.ui
@@ -115,6 +115,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="toolTip">
+     <string>Move</string>
+    </property>
     <property name="text">
      <string/>
     </property>
