--- a/src/frontend/SettingsDialog.ui
+++ b/src/frontend/SettingsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
-    <height>111</height>
+    <width>388</width>
+    <height>133</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>-10</x>
-     <y>70</y>
+     <x>0</x>
+     <y>90</y>
      <width>381</width>
      <height>32</height>
     </rect>
@@ -53,6 +53,19 @@
    </property>
    <property name="text">
     <string>Candidate window orientation is horizontal</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBoxCWPhonetic">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>60</y>
+     <width>331</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Show Candidate Window in phonetic mode</string>
    </property>
   </widget>
  </widget>
