--- a/src/frontend/TopBar.ui
+++ b/src/frontend/TopBar.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>181</width>
-    <height>31</height>
+    <width>156</width>
+    <height>26</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>999</width>
+    <height>999</height>
+   </size>
   </property>
   <property name="cursor">
    <cursorShape>ArrowCursor</cursorShape>
@@ -20,15 +26,30 @@
    <iconset resource="images.qrc">
     <normaloff>:/images/OpenBangla-Keyboard.png</normaloff>:/images/OpenBangla-Keyboard.png</iconset>
   </property>
+  <property name="documentMode">
+   <bool>false</bool>
+  </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="maximumSize">
+    <size>
+     <width>16777187</width>
+     <height>16777215</height>
+    </size>
+   </property>
    <widget class="QPushButton" name="buttonAbout">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>104</x>
       <y>0</y>
-      <width>31</width>
-      <height>31</height>
+      <width>27</width>
+      <height>27</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>0</height>
+     </size>
     </property>
     <property name="toolTip">
      <string>Help</string>
@@ -37,14 +58,29 @@
      <iconset resource="images.qrc">
       <normaloff>:/images/about.png</normaloff>:/images/about.png</iconset>
     </property>
+    <property name="iconSize">
+     <size>
+      <width>12</width>
+      <height>12</height>
+     </size>
+    </property>
+    <property name="autoDefault">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="buttonSetLayout">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>26</x>
       <y>0</y>
-      <width>31</width>
-      <height>31</height>
+      <width>27</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="toolTip">
@@ -58,10 +94,10 @@
    <widget class="QPushButton" name="buttonViewLayout">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>52</x>
       <y>0</y>
-      <width>31</width>
-      <height>31</height>
+      <width>27</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="toolTip">
@@ -75,10 +111,10 @@
    <widget class="QPushButton" name="buttonSettings">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>78</x>
       <y>0</y>
-      <width>31</width>
-      <height>31</height>
+      <width>27</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="toolTip">
@@ -92,10 +128,10 @@
    <widget class="QPushButton" name="buttonShutdown">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>130</x>
       <y>0</y>
-      <width>31</width>
-      <height>31</height>
+      <width>27</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="text">
@@ -111,8 +147,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>31</width>
-      <height>31</height>
+      <width>27</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="toolTip">
@@ -124,6 +160,12 @@
     <property name="icon">
      <iconset resource="images.qrc">
       <normaloff>:/images/icon.png</normaloff>:/images/icon.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>16</width>
+      <height>16</height>
+     </size>
     </property>
    </widget>
   </widget>
