--- a/src/frontend/SettingsDialog.ui
+++ b/src/frontend/SettingsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>388</width>
-    <height>133</height>
+    <width>453</width>
+    <height>182</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>90</y>
-     <width>381</width>
+     <x>20</x>
+     <y>140</y>
+     <width>421</width>
      <height>32</height>
     </rect>
    </property>
@@ -29,43 +29,85 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBoxPrevWin">
+  <widget class="QPushButton" name="btnClosePrevWin">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>340</x>
+     <y>10</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Off</string>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="cmbOrientation">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>90</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
      <y>20</y>
-     <width>351</width>
-     <height>22</height>
+     <width>312</width>
+     <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Enter/Return key only closes preview window</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter/Return key only closes preview window:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBoxCandidateWinHorizontal">
+  <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>341</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Candidate window orientation is horizontal</string>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBoxCWPhonetic">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
+     <x>50</x>
      <y>60</y>
-     <width>331</width>
-     <height>22</height>
+     <width>280</width>
+     <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Show Candidate Window in phonetic mode</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show Preview Window in Phonetic mode:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnShowPrevWin">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>50</y>
+     <width>101</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Off</string>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>100</y>
+     <width>191</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Suggestion List Orientation:</string>
    </property>
   </widget>
  </widget>
