--- a/src/frontend/LayoutViewer.ui
+++ b/src/frontend/LayoutViewer.ui
@@ -125,7 +125,13 @@
        </property>
        <property name="icon">
         <iconset resource="images.qrc">
-         <normaloff>:/images/about.png</normaloff>:/images/about.png</iconset>
+         <normaloff>:/images/outline_description_black_18dp.png</normaloff>:/images/outline_description_black_18dp.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>18</width>
+         <height>18</height>
+        </size>
        </property>
       </widget>
      </item>
